[gd_scene load_steps=3 format=2]

[ext_resource path="res://StatScreen.gd" type="Script" id=1]
[ext_resource path="res://hud/HudTheme.theme" type="Theme" id=2]

[node name="StatScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 502.0
margin_bottom = 438.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 502.0
margin_bottom = 53.0

[node name="Left" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 389.0
margin_bottom = 53.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Left"]
margin_right = 389.0
margin_bottom = 15.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Left/HBoxContainer"]
margin_right = 90.0
margin_bottom = 15.0
text = "SCORE "

[node name="Score" type="Label" parent="VBoxContainer/HBoxContainer/Left/HBoxContainer"]
unique_name_in_owner = true
margin_left = 94.0
margin_right = 389.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "000000"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Left"]
margin_top = 19.0
margin_right = 389.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Left/HBoxContainer2"]
margin_right = 90.0
margin_bottom = 15.0
text = "STAGE "

[node name="Stage" type="Label" parent="VBoxContainer/HBoxContainer/Left/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 94.0
margin_right = 389.0
margin_bottom = 15.0
size_flags_horizontal = 3
text = "0"

[node name="Spacer2" type="Label" parent="VBoxContainer/HBoxContainer/Left"]
margin_top = 38.0
margin_right = 389.0
margin_bottom = 53.0

[node name="DeathGrid" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 393.0
margin_right = 502.0
margin_bottom = 53.0
columns = 2

[node name="Deaths" type="Label" parent="VBoxContainer/HBoxContainer/DeathGrid"]
margin_right = 90.0
margin_bottom = 15.0
text = "DEATHS"

[node name="DeathTotal" type="Label" parent="VBoxContainer/HBoxContainer/DeathGrid"]
unique_name_in_owner = true
margin_left = 94.0
margin_right = 109.0
margin_bottom = 15.0
text = "5"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 502.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 90.0
margin_bottom = 15.0
text = "KILLS "

[node name="KillTotal" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 94.0
margin_right = 109.0
margin_bottom = 15.0
text = "5"

[node name="Kills" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 76.0
margin_right = 502.0
margin_bottom = 76.0
size_flags_horizontal = 3
columns = 4
